--- a/src/angular/accordion/expansion-panel.html
+++ b/src/angular/accordion/expansion-panel.html
@@ -3,7 +3,8 @@
   class="sbb-expansion-panel-content"
   role="region"
   [@bodyExpansion]="_getExpandedState()"
-  (@bodyExpansion.done)="_bodyAnimationDone.next($event)"
+  (@bodyExpansion.start)="_animationStarted($event)"
+  (@bodyExpansion.done)="_animationDone($event)"
   [attr.aria-labelledby]="_headerId"
   [id]="id"
   #body
