fix(angular/accordion): switch away from animations module
Reworks the accordion to animate purely with CSS, rather than going through the `@angular/animations` module. This simplifies the setup and allows us to resolve several long-standing bug reports.

--- a/src/angular/accordion/expansion-panel-header.html
+++ b/src/angular/accordion/expansion-panel-header.html
@@ -15,7 +15,7 @@
         }
       }
       @default {
-        <sbb-icon [@indicatorRotate]="_getExpandedState()" svgIcon="chevron-right-small"></sbb-icon>
+        <sbb-icon svgIcon="chevron-right-small"></sbb-icon>
       }
     }
   </span>
