--- a/src/angular/accordion/expansion-panel.html
+++ b/src/angular/accordion/expansion-panel.html
@@ -1,16 +1,15 @@
 <ng-content select="sbb-expansion-panel-header"></ng-content>
-<div
-  class="sbb-expansion-panel-content"
-  role="region"
-  [@bodyExpansion]="_getExpandedState()"
-  (@bodyExpansion.start)="_animationStarted($event)"
-  (@bodyExpansion.done)="_animationDone($event)"
-  [attr.aria-labelledby]="_headerId"
-  [id]="id"
-  #body
->
-  <div class="sbb-expansion-panel-body sbb-expansion-panel-horizontal-padding">
-    <ng-content></ng-content>
-    <ng-template [cdkPortalOutlet]="_portal"></ng-template>
+<div class="sbb-expansion-panel-content-wrapper" [attr.inert]="expanded ? null : ''" #bodyWrapper>
+  <div
+    class="sbb-expansion-panel-content"
+    role="region"
+    [attr.aria-labelledby]="_headerId"
+    [id]="id"
+    #body
+  >
+    <div class="sbb-expansion-panel-body sbb-expansion-panel-horizontal-padding">
+      <ng-content></ng-content>
+      <ng-template [cdkPortalOutlet]="_portal"></ng-template>
+    </div>
   </div>
 </div>
