fix(angular/input): show spin buttons for number input
For accessibility reasons, we want to show the spin buttons in `input[type='number']`

Closes #2380

--- a/src/components-examples/angular/input/input-form/input-form-example.html
+++ b/src/components-examples/angular/input/input-form/input-form-example.html
@@ -32,6 +32,6 @@
   </sbb-form-field>
   <sbb-form-field class="sbb-form-field-long">
     <sbb-label>Postal Code</sbb-label>
-    <input sbbInput maxlength="4" placeholder="Ex. 3000" value="3000" />
+    <input sbbInput maxlength="4" placeholder="Ex. 3000" type="number" value="3000" />
   </sbb-form-field>
 </form>
