test: fix select and form-field tests

--- a/src/angular/form-field/form-field.html
+++ b/src/angular/form-field/form-field.html
@@ -8,7 +8,7 @@
     >
       @switch (_hasLabel()) {
         @case (false) {
-          <span>{{ label }}</span>
+          <span>{{ label() }}</span>
         }
         @case (true) {
           <ng-content select="sbb-label"></ng-content>
