--- a/src/angular/processflow/processflow.html
+++ b/src/angular/processflow/processflow.html
@@ -1,24 +1,24 @@
 <div #stepListContainer class="sbb-processflow-header-container sbb-scrollbar">
-  @for (step of steps; track step; let i = $index; let isLast = $last) {
+  @for (step of steps; track step; let isLast = $last) {
     <sbb-step-header
       class="sbb-processflow-header"
       (click)="step.select()"
       (keydown)="_onKeydown($event)"
-      [tabIndex]="_getFocusIndex() === i ? 0 : -1"
-      [id]="_getStepLabelId(i)"
-      [attr.aria-posinset]="i + 1"
+      [tabIndex]="_getFocusIndex() === step.index() ? 0 : -1"
+      [id]="_getStepLabelId(step.index())"
+      [attr.aria-posinset]="step.index() + 1"
       [attr.aria-setsize]="steps.length"
-      [attr.aria-controls]="_getStepContentId(i)"
-      [attr.aria-selected]="selectedIndex == i"
+      [attr.aria-controls]="_getStepContentId(step.index())"
+      [attr.aria-selected]="step.isSelected()"
       [attr.aria-label]="step.ariaLabel || null"
       [attr.aria-labelledby]="!step.ariaLabel && step.ariaLabelledby ? step.ariaLabelledby : null"
-      [index]="i"
-      [state]="_getIndicatorType(i, step.state)"
+      [index]="step.index()"
+      [state]="step.indicatorType()"
       [label]="step.stepLabel || step.label"
-      [selected]="selectedIndex === i"
-      [active]="step.completed || selectedIndex === i || !linear"
+      [selected]="step.isSelected()"
+      [active]="step.completed || selectedIndex === step.index() || !linear"
       [optional]="step.optional"
-      [locked]="!step.editable && i < selectedIndex"
+      [locked]="!step.editable && step.index() < selectedIndex"
     ></sbb-step-header>
     @if (!isLast) {
       <div class="sbb-processflow-separator">
