--- a/src/angular/toggle/toggle.html
+++ b/src/angular/toggle/toggle.html
@@ -3,17 +3,19 @@
 </div>
 
 <section class="sbb-toggle-option-content" [id]="_contentId">
-  @if (selected?._details) {
+  @if (selected?._details()) {
     <div
       class="sbb-toggle-option-content-wrapper sbb-scrollbar"
       #toggleOptionContentWrapper
       [@translateHeight]="{
         value: _heightAnimationState,
-        params: { currentHeight: _currentOptionContentWrapperHeight },
+        params: { currentHeight: _currentOptionContentWrapperHeight() },
       }"
       (@translateHeight.done)="_onHeightAnimationDone($event)"
     >
-      <ng-template [cdkPortalOutlet]="selected?._details ? selected?._content : null"></ng-template>
+      <ng-template
+        [cdkPortalOutlet]="selected?._details() ? selected?._content() : null"
+      ></ng-template>
     </div>
   }
 </section>
