build: rename showcase to docs

--- a/src/components-examples/angular/table/sticky-table/sticky-table-example.html
+++ b/src/components-examples/angular/table/sticky-table/sticky-table-example.html
@@ -53,8 +53,8 @@
 
 <p>
   <small>
-    *Switching between standard and lean design in the showcase does not update sticky styles which
-    can result in wrongly displayed styles. Please refresh your view after switching between
-    standard and lean design.
+    *Switching between standard and lean design in the documentation app does not update sticky
+    styles which can result in wrongly displayed styles. Please refresh your view after switching
+    between standard and lean design.
   </small>
 </p>
