feat(journey-maps): support new field name 'didokCode' in addition to 'sbb_id'
refs: ROKAS-2565

--- a/src/components-examples/journey-maps/angular/journey-maps-feature-types/journey-maps-feature-types-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-feature-types/journey-maps-feature-types-example.html
@@ -27,7 +27,9 @@
   </ng-template>
   <ng-template #stationTemplate let-station>
     <div class="station-title">{{ station.properties.name }}</div>
-    <div class="station-subtitle">{{ station.properties.sbb_id }}</div>
+    <div class="station-subtitle">
+      {{ station.properties.sbb_id || station.properties.didokCode }}
+    </div>
   </ng-template>
   <ng-template #routeTemplate let-route>
     <div class="route-title">{{ route.properties.routeId }}</div>
